# llmexperts

./: .gitignore  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
docs/: conf.py  index.md
docs/api/: llmexperts.rst  modules.rst
src/llmexperts/: __init__.py  analyze.py  model.py  prompts.py  scale.py  skeleton.py  store.py  summarize.py  utils.py  workflow.py
tests/: conftest.py  prompts-analyze.yaml  prompts-analyze__examples.yaml  prompts-scale.yaml  prompts-scale__examples.yaml  prompts-summarize.yaml  prompts-summarize__real.yaml  test_analyze.py  test_model.py  test_prompt.py  test_scale.py  test_skeleton.py  test_summarize.py
